# spectral-unit-convert

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/spectral_unit_convert/: __init__.py  _freq.py  _frequency.py  _radiance.py  _typing.py  _typing.pyi
tests/: test_frequency.py
